Prevent disabled field set inputs from overflowing
Closes arsnova/arsnova#63.

--- a/src/main/webapp/resources/sass/app/_general.scss
+++ b/src/main/webapp/resources/sass/app/_general.scss
@@ -464,6 +464,11 @@ code {
 .standardFieldset .x-form-fieldset-inner {
 	border: none;
 	background-color: transparent;
+
+	& .x-item-disabled {
+		/* Prevent input field from breaking out */
+		overflow-x: hidden;
+	}
 }
 
 .standardFieldset>div>div>div>div:first-child {
